--- a/src/pages/eshop/style.scss
+++ b/src/pages/eshop/style.scss
@@ -1,4 +1,5 @@
 @use "../../assets/styles/_partials/mixins";
+@use "../../assets/styles/_partials/variables";
 
 #header {
   padding: 0 2.5rem;
@@ -41,5 +42,59 @@
   .accordion-button::after {
     filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(8%)
       hue-rotate(146deg) brightness(103%) contrast(103%);
+  }
+}
+
+#results {
+  .basket {
+    height: 1.5rem;
+  }
+
+  .form-select {
+    width: max-content;
+    background-color: #000 !important;
+    color: #fff;
+    cursor: pointer;
+    border: none;
+  }
+  .accordion-button::after {
+    filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(8%)
+      hue-rotate(146deg) brightness(103%) contrast(103%);
+  }
+  .article-wrapper {
+    row-gap: 4rem;
+  }
+
+  .sale {
+    background: variables.$grad-yellow-opaque;
+    color: #000;
+    padding: 0.25rem 2rem;
+    position: absolute;
+    top: 0;
+    left: 1.5rem;
+  }
+
+  .icon-heart {
+    width: 1.3rem;
+    height: 1.3rem;
+    position: absolute;
+    top: 0.75rem;
+    right: 2rem;
+  }
+
+  .card {
+    cursor: pointer;
+  }
+  .card-img-top {
+    width: 100%;
+    height: 320px;
+    object-fit: cover;
+    object-position: center;
+  }
+  .card-body {
+    background-color: #000;
+  }
+  .prev-price {
+    color: #959595;
   }
 }
